feat: support NukkitX with unified Java 8 build